style.css
/*
THEME NAME: WP Theme Neat
THEME URI: http://gcers.org/products/wp-theme-neat/
DESCRIPTION: Rich with powerful and dynamic semantic class selectors.
VERSION: 0.1
AUTHOR: <a href="http://euyuil.com/">EUYUIL</a>
AUTHOR URI:
TAGS: white, microformats, fixed-width, flexible-width, one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar
*/

/* Two-column with sidebar on left from the /examples/ folder  */
@import url('examples/2c-r.css');

a {
color:#15c;
text-decoration:none;
}

a:hover {
color:#006ac8;
text-decoration:underline;
}

a:visited {
color:#15c;
}

body {
margin:0;
padding:0;
font-size:13px;
line-height:1.67em;
}

h1 {
font-size:24px;
}

h1,h2,h3,h4,h5 {
line-height:24px;
}

h1,h2,h3,h4,h5,h6 {
font-weight:normal;
color:#222;
}

/* Just some example content */
div#menu {
line-height:39px;
font-size:14px;
background:#444;
margin:0 0 14px 0;
}

div#menu ul,div#menu ul ul {
list-style:none;
margin:0;
padding:0;
}

div#menu .current_page_item,
div#menu .current-menu-item {
background:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAKCAYAAACuaZ5oAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAH1JREFUeNpi/P//PwORgBmIJ0DZBUD8lyhdIAuIwEJAvP0/AmyHihHUS4zhKkB8+z8muA2Vo8gCeyB++x83eAtVQ5YFOUD88z9h8AeqlmgLmIF48n/SwWSoXrwWoEcmqQAj8omJTFIBSuQTG5mkAnjkwyLzz3/qA3DkAwQYABEvANn67PzPAAAAAElFTkSuQmCC") no-repeat scroll center 33px transparent;
}

div#menu .current_page_item a,
div#menu .current-menu-item a {
font-weight:bold;
}

div#menu ul a {
color:white;
}

div#menu ul ul ul a {
font-style:italic;
}

div#menu ul li {
margin-right:30px;
}

div#menu ul li ul li {
margin-right:0px;
}

div#menu ul li ul {
left:-999em;
position:absolute;
}

div#menu ul li:hover ul {
left:auto;
}

.entry-title,.entry-meta {
clear:both;
}

form#commentform .form-label {
margin:1em 0 0;
}

form#commentform span.required {
background:#fff;
color:#c30;
}

form#commentform,form#commentform p {
padding:0;
}

input#author,input#email,input#url,textarea#comment {
padding:0.2em;
}

div.comments ol li {
margin:0 0 3.5em;
}

textarea#comment {
height:13em;
margin:0 0 0.5em;
overflow:auto;
width:66%;
}

.alignright,img.alignright{
float:right;
margin:1em 0 0 1em;
}

.alignleft,img.alignleft{
float:left;
margin:1em 1em 0 0;
}

.aligncenter,img.aligncenter{
display:block;
margin:1em auto;
text-align:center;
}

div.gallery {
clear:both;
height:180px;
margin:1em 0;
width:100%;
}

p.wp-caption-text{
font-style:italic;
}

div.gallery dl{
margin:1em auto;
overflow:hidden;
text-align:center;
}

div.gallery dl.gallery-columns-1 {
width:100%;
}

div.gallery dl.gallery-columns-2 {
width:49%;
}

div.gallery dl.gallery-columns-3 {
width:33%;
}

div.gallery dl.gallery-columns-4 {
width:24%;
}

div.gallery dl.gallery-columns-5 {
width:19%;
}

div#nav-above {
margin-bottom:1em;
}

div#nav-below {
margin-top:1em;
}

div#nav-images {
height:150px;
margin:1em 0;
}

div.navigation {
height:1.25em;
}

div.navigation div.nav-next {
float:right;
text-align:right;
}

div.sidebar h3 {
font-size:1.2em;
}

div.sidebar input#s {
width:7em;
}

div.sidebar li {
list-style:none;
margin:0 0 2em;
}

div.sidebar li form {
margin:0.2em 0 0;
padding:0;
}

div.sidebar ul ul {
margin:0 0 0 1em;
}

div.sidebar ul ul li {
list-style:disc;
margin:0;
}

div.sidebar ul ul ul {
margin:0 0 0 0.5em;
}

div.sidebar ul ul ul li {
list-style:circle;
}

div#menu ul li,div.gallery dl,div.navigation div.nav-previous {
float:left;
}

div#menu,div#footer {
overflow:hidden;
clear:both;
padding:0 44px;
}

div#header {
background:#f1f1f1;
padding:12px 44px 20px 44px;
border-bottom:1px solid #e5e5e5;
}

h1#blog-title {
margin:0;
padding:0;
}

div#footer {
line-height:44px;
background:#333;
}

div#footer a {
color:white;
}

input#author,input#email,input#url,div.navigation div {
width:50%;
}

div.gallery *,div.sidebar div,div.sidebar h3,div.sidebar ul {
margin:0;
padding:0;
}

